Changed database to Postgres